Default for tracker url

--- a/src/common/options.html
+++ b/src/common/options.html
@@ -510,6 +510,7 @@ MIT License : http://adampritchard.mit-license.org/
         </div>
 
         <div class="section-title">
+          <br>
           Verhalten 
         </div>
 
@@ -529,15 +530,18 @@ MIT License : http://adampritchard.mit-license.org/
 
       <div class="control-group">
         <div class="section-title">
-          Anmerkungen 
+          Einrichten 
         </div>
         <div id="notes">
           <ul>
             <li>
-              Was es zu sagen gibt...
+            Melde Dich bei einem Tracker an (z.B. <a href="https://re.de.a9sapp.eu">hier</a>) 
             </li>
             <li>
-              Mehr davon...
+            Kopiere Deinen API-Key und trage ihn links ein, den Server ebenso
+            </li>
+            <li>
+            Schreibe eine Mail, füge über den "Re:"-Button eine Lesebestätigung hinzu
             </li>
           </ul>
         </div>
